--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <div class="project-text">
                 <h2 data-aos="fade-left" data-aos-duration="2000" class='project-heading'>Surfgroove</h2>
                 <div data-aos="fade-left" data-aos-duration="2000" class="project-subhead">Conservation Society</div>
-                <a href="https://kris-furer.github.io/">
+                <a href="https://kris-furer.github.io/Surfgroove/">
                   <p class='see-more hover-underline desktop' data-aos="fade-left" data-aos-duration="2500">See it Live <span> <i class="fa fa-angle-right" aria-hidden="true"></i>
                     </span></p>
                 </a>
