--- a/home.html
+++ b/home.html
@@ -119,7 +119,7 @@
               <div class="project-text">
                 <h2 data-aos="fade-left" data-aos-duration="2000" class='project-heading'>Surfgroove</h2>
                 <div data-aos="fade-left" data-aos-duration="2000" class="project-subhead">Conservation Society</div>
-                <a href="https://kris-furer.github.io/">
+                <a href="https://kris-furer.github.io/Surfgroove/">
                   <p class='see-more hover-underline desktop' data-aos="fade-left" data-aos-duration="2500">See it Live <span> <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </span></p>
                 </a>
@@ -146,7 +146,7 @@
                 </div>
               </div>
               <!-- mobile button ::::::::::::::::::::::::::::::::::::::::-->
-              <a href="accomodation.html">
+              <a href="https://kris-furer.github.io/Surfgroove/l">
                 <p class=' mobile mobile-more hover-underline'>see case study<span> <i class="fa fa-angle-right" aria-hidden="true"></i></span></p>
               </a>
               <!-- mobile button ends :::::::::::::::::::::::::::::::::-->
