--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </div>
               </div>
               <!-- mobile button ::::::::::::::::::::::::::::::::::::::::-->
-              <a href="accomodation.html">
+              <a href="https://kris-furer.github.io/Surfgroove/">
                 <p class=' mobile mobile-more hover-underline'>see case study<span> <i class="fa fa-angle-right" aria-hidden="true"></i></span></p>
               </a>
               <!-- mobile button ends :::::::::::::::::::::::::::::::::-->
