--- a/home.html
+++ b/home.html
@@ -146,7 +146,7 @@
                 </div>
               </div>
               <!-- mobile button ::::::::::::::::::::::::::::::::::::::::-->
-              <a href="https://kris-furer.github.io/Surfgroove/l">
+              <a href="https://kris-furer.github.io/Surfgroove/">
                 <p class=' mobile mobile-more hover-underline'>see case study<span> <i class="fa fa-angle-right" aria-hidden="true"></i></span></p>
               </a>
               <!-- mobile button ends :::::::::::::::::::::::::::::::::-->
