--- a/home.html
+++ b/home.html
@@ -196,6 +196,48 @@
         </div>
 
 
+        <div class="section section-5 fp-auto-height-responsive">
+
+          <div class="block block5">
+            <div class="project-flex">
+              <div class="project-text">
+                <h2 data-aos="fade-left" data-aos-duration="2000" class='project-heading'>Masterton <br> Builders<br>
+                </h2>
+                <div data-aos="fade-left" data-aos-duration="2000" class='project-subhead'>Custom Wordpress Theme</div>
+                <a href="https://kris-furer.github.io/Surfgroove/">
+                  <p class='see-more hover-underline desktop' data-aos="fade-left" data-aos-duration="2500">See it Live <span> <i class="fa fa-angle-right" aria-hidden="true"></i>
+                </span></p>
+                </a>
+              </div>
+              <div class="custom-slide-control">
+                <i class="fa fa-angle-left customLeft" aria-hidden="true"></i>
+                <i class="fa fa-angle-right customRight" aria-hidden="true"></i>
+              </div>
+              <!-- slide 1 starts -->
+              <div class="slide slide1 fp-auto-height-responsive ">
+
+                <div class="screenshot-scroll ">
+                  <img class='screenshot' src="img/m-build.png" alt="Desktop view up of Broncho site. Made as part of an assignment not affliated with the band.">
+                </div>
+              </div>
+              <!-- slide 2 starts -->
+              <div class=" slide slide2 fp-auto-height-responsive">
+                <div class="screenshot-mobile">
+                  <img class='mobile-img' src="img/broncho-mob.png" alt="Mobile mock up of mobile version of Broncho site. Made as part of an assignment not affliated with the band.">
+                </div>
+              </div>
+              <!-- mobile button ::::::::::::::::::::::::::::::::::::::::-->
+              <!-- <div href="accomodation.html">
+                <p class=' mobile mobile-more hover-underline'>see case study<span> <i class="fa fa-angle-right" aria-hidden="true"></i></span></p>
+              </div> -->
+              <!-- mobile button ends :::::::::::::::::::::::::::::::::-->
+              <!-- project flex -->
+            </div>
+
+          </div>
+        </div>
+
+
 
 
         <!-- full page ends -->
