--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
               <!-- slide 2 starts -->
               <div class=" slide slide2 fp-auto-height-responsive">
                 <div class="screenshot-mobile">
-                  <img class='mobile-img' src="img/broncho-mob.png" alt="Mobile mock up of mobile version of Broncho site. Made as part of an assignment not affliated with the band.">
+                  <img class='mobile-img' src="img/contact-sc.png" alt="Mobile mock up of mobile version of Broncho site. Made as part of an assignment not affliated with the band.">
                 </div>
               </div>
               <!-- mobile button ::::::::::::::::::::::::::::::::::::::::-->
