--- a/home.html
+++ b/home.html
@@ -222,7 +222,7 @@
               </div>
               <!-- slide 2 starts -->
               <div class=" slide slide2 fp-auto-height-responsive">
-                <div class="screenshot-mobile">
+                <div class="screenshot-scroll">
                   <img class='mobile-img' src="img/contact-sc.png" alt="Mobile mock up of mobile version of Broncho site. Made as part of an assignment not affliated with the band.">
                 </div>
               </div>
