--- a/home.html
+++ b/home.html
@@ -204,7 +204,7 @@
                 <h2 data-aos="fade-left" data-aos-duration="2000" class='project-heading'>Masterton <br> Builders<br>
                 </h2>
                 <div data-aos="fade-left" data-aos-duration="2000" class='project-subhead'>Custom Wordpress Theme</div>
-                <a href="https://kris-furer.github.io/Surfgroove/">
+                <a href="http://kris.yoobee.site">
                   <p class='see-more hover-underline desktop' data-aos="fade-left" data-aos-duration="2500">See it Live <span> <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </span></p>
                 </a>
